file-manager/k8s/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: file-manager
spec:
    selector:
        matchLabels:
            app: file-manager
    replicas: 2
    template:
        metadata:
            labels:
                app: file-manager
        spec:
            containers:
                - image: 654654400574.dkr.ecr.ap-south-1.amazonaws.com/file-manager:prod
                  imagePullPolicy: Always
                  name: file-manager
                  ports:
                      - containerPort: 3001
