file-manager/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: file-manager
spec:
    ports:
        - port: 80
          targetPort: 3001
          protocol: TCP
    type: NodePort
    selector:
        app: file-manager
